syntax = "proto3";
package ivy_daemon;

message InfoRequest{
}

message InfoResponse{
    string avs_name = 1;
}

service IvyDaemon {
    rpc GetInfo(InfoRequest) returns (InfoResponse); 
}

