syntax = "proto3";
package ivy_daemon_types;

enum ResponseType {
    OK = 0;
    ERROR = 1;
}
